add column 'title' to quetionnaire_detail

--- a/notebooks/preparation_for_analysis.ipynb
+++ b/notebooks/preparation_for_analysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -268,25 +268,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "questionnaire_details = [\n",
-    "    [\"q1\", \"豊かでない- 豊かである\"],\n",
-    "    [\"q2\", \"ポジティブでない - ポジティブである\"],\n",
-    "    [\"q3\", \"暗い - 明るい\"],\n",
-    "    [\"q4\", \"弱々しい - 力強い\"],\n",
-    "    [\"q5\", \"平凡な - 独創的な\"],\n",
-    "    [\"q6\", \"理性的な - 感情的な\"]\n",
+    "    [\"q1\", \"Questionnaire 1\", \"豊かでない- 豊かである\"],\n",
+    "    [\"q2\", \"Questionnaire 2\",\"ポジティブでない - ポジティブである\"],\n",
+    "    [\"q3\", \"Questionnaire 3\",\"暗い - 明るい\"],\n",
+    "    [\"q4\", \"Questionnaire 4\",\"弱々しい - 力強い\"],\n",
+    "    [\"q5\", \"Questionnaire 5\",\"平凡な - 独創的な\"],\n",
+    "    [\"q6\", \"Questionnaire 6\",\"理性的な - 感情的な\"]\n",
     "]\n",
-    "columns = [ \"id\", \"content\" ]\n",
+    "columns = [ \"id\", \"title\", \"content\" ]\n",
     "questionnaire_details = pd.DataFrame(\n",
     "    questionnaire_details, \n",
     "    columns = columns\n",
     ")\n",
     "questionnaire_details.to_csv(data_dir + \"/questionnaire_details.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
